// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`next matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Next
    activeCards={
        Array [
            Object {
              "category": "CELEBRITY",
              "description": "An Internet meme that shows a Shiba Inu surrounded by colorful Comic Sans text that describes its inner monologue, such as \\"Wow,\\" \\"Concern,\\" and \\"so scare.\\" There is much confuse over the name's pronunciation, yet it was recently used to brand a Bitcoin competitor.",
              "name": "Doge",
              "pointValue": 3,
            },
          ]
    }
    countDown={[Function]}
    currRound={1}
    currTeam="team1"
    currentTeam={[Function]}
    teamNames={
        Array [
            "team1",
            "team2",
          ]
    }
    updateTeamTimer={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="team-transition"
>
        <h2
                className="current-team-headline"
                style={
                        Object {
                                "color": "#00B4EF",
                              }
                }
        >
                team1
                , 
                <br />
                 your turn
        </h2>
        <p
                className="remaining-cards"
        >
                1
                 Cards Remaining
        </p>
        <div
                className="dashed-line-next"
        />
        <button
                className="start-turn-button"
                onClick={[Function]}
        >
                START
        </button>
</div>,
      "className": "background-monikers",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="current-team-headline"
            style={
                        Object {
                                    "color": "#00B4EF",
                                  }
            }
>
            team1
            , 
            <br />
             your turn
</h2>,
          <p
            className="remaining-cards"
>
            1
             Cards Remaining
</p>,
          <div
            className="dashed-line-next"
/>,
          <button
            className="start-turn-button"
            onClick={[Function]}
>
            START
</button>,
        ],
        "className": "team-transition",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "team1",
              ", ",
              <br />,
              " your turn",
            ],
            "className": "current-team-headline",
            "style": Object {
              "color": "#00B4EF",
            },
          },
          "ref": null,
          "rendered": Array [
            "team1",
            ", ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            " your turn",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              1,
              " Cards Remaining",
            ],
            "className": "remaining-cards",
          },
          "ref": null,
          "rendered": Array [
            1,
            " Cards Remaining",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "dashed-line-next",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "START",
            "className": "start-turn-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "START",
          "type": "button",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="team-transition"
>
          <h2
                    className="current-team-headline"
                    style={
                              Object {
                                        "color": "#00B4EF",
                                      }
                    }
          >
                    team1
                    , 
                    <br />
                     your turn
          </h2>
          <p
                    className="remaining-cards"
          >
                    1
                     Cards Remaining
          </p>
          <div
                    className="dashed-line-next"
          />
          <button
                    className="start-turn-button"
                    onClick={[Function]}
          >
                    START
          </button>
</div>,
        "className": "background-monikers",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="current-team-headline"
              style={
                            Object {
                                          "color": "#00B4EF",
                                        }
              }
>
              team1
              , 
              <br />
               your turn
</h2>,
            <p
              className="remaining-cards"
>
              1
               Cards Remaining
</p>,
            <div
              className="dashed-line-next"
/>,
            <button
              className="start-turn-button"
              onClick={[Function]}
>
              START
</button>,
          ],
          "className": "team-transition",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "team1",
                ", ",
                <br />,
                " your turn",
              ],
              "className": "current-team-headline",
              "style": Object {
                "color": "#00B4EF",
              },
            },
            "ref": null,
            "rendered": Array [
              "team1",
              ", ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              " your turn",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                1,
                " Cards Remaining",
              ],
              "className": "remaining-cards",
            },
            "ref": null,
            "rendered": Array [
              1,
              " Cards Remaining",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "dashed-line-next",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "START",
              "className": "start-turn-button",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "START",
            "type": "button",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`next matches the snapshot if currTeam !== teamNames[0]  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Next
    activeCards={
        Array [
            Object {
              "category": "CELEBRITY",
              "description": "An Internet meme that shows a Shiba Inu surrounded by colorful Comic Sans text that describes its inner monologue, such as \\"Wow,\\" \\"Concern,\\" and \\"so scare.\\" There is much confuse over the name's pronunciation, yet it was recently used to brand a Bitcoin competitor.",
              "name": "Doge",
              "pointValue": 3,
            },
          ]
    }
    countDown={[Function]}
    currRound={1}
    currTeam="team2"
    currentTeam={[Function]}
    teamNames={
        Array [
            "team1",
            "team2",
          ]
    }
    updateTeamTimer={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="team-transition"
>
        <h2
                className="current-team-headline"
                style={
                        Object {
                                "color": "#866AAD",
                              }
                }
        >
                team2
                , 
                <br />
                 your turn
        </h2>
        <p
                className="remaining-cards"
        >
                1
                 Cards Remaining
        </p>
        <div
                className="dashed-line-next"
        />
        <button
                className="start-turn-button"
                onClick={[Function]}
        >
                START
        </button>
</div>,
      "className": "background-monikers",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="current-team-headline"
            style={
                        Object {
                                    "color": "#866AAD",
                                  }
            }
>
            team2
            , 
            <br />
             your turn
</h2>,
          <p
            className="remaining-cards"
>
            1
             Cards Remaining
</p>,
          <div
            className="dashed-line-next"
/>,
          <button
            className="start-turn-button"
            onClick={[Function]}
>
            START
</button>,
        ],
        "className": "team-transition",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "team2",
              ", ",
              <br />,
              " your turn",
            ],
            "className": "current-team-headline",
            "style": Object {
              "color": "#866AAD",
            },
          },
          "ref": null,
          "rendered": Array [
            "team2",
            ", ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            " your turn",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              1,
              " Cards Remaining",
            ],
            "className": "remaining-cards",
          },
          "ref": null,
          "rendered": Array [
            1,
            " Cards Remaining",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "dashed-line-next",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "START",
            "className": "start-turn-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "START",
          "type": "button",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="team-transition"
>
          <h2
                    className="current-team-headline"
                    style={
                              Object {
                                        "color": "#866AAD",
                                      }
                    }
          >
                    team2
                    , 
                    <br />
                     your turn
          </h2>
          <p
                    className="remaining-cards"
          >
                    1
                     Cards Remaining
          </p>
          <div
                    className="dashed-line-next"
          />
          <button
                    className="start-turn-button"
                    onClick={[Function]}
          >
                    START
          </button>
</div>,
        "className": "background-monikers",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="current-team-headline"
              style={
                            Object {
                                          "color": "#866AAD",
                                        }
              }
>
              team2
              , 
              <br />
               your turn
</h2>,
            <p
              className="remaining-cards"
>
              1
               Cards Remaining
</p>,
            <div
              className="dashed-line-next"
/>,
            <button
              className="start-turn-button"
              onClick={[Function]}
>
              START
</button>,
          ],
          "className": "team-transition",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "team2",
                ", ",
                <br />,
                " your turn",
              ],
              "className": "current-team-headline",
              "style": Object {
                "color": "#866AAD",
              },
            },
            "ref": null,
            "rendered": Array [
              "team2",
              ", ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              " your turn",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                1,
                " Cards Remaining",
              ],
              "className": "remaining-cards",
            },
            "ref": null,
            "rendered": Array [
              1,
              " Cards Remaining",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "dashed-line-next",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "START",
              "className": "start-turn-button",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "START",
            "type": "button",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
